# idworker

./: Cargo.toml  README.adoc
benches/: fast_benches.rs  id_benches.rs  normal_benches.rs
src/: generator.rs  id_worker.rs  id_worker_config.rs  id_worker_error.rs  id_worker_options.rs  id_worker_utils.rs  lib.rs  options.rs
src/id_worker/: fast_id_worker.rs  id_worker.rs  mod.rs  snowflake_id_worker.rs
src/internal/: fast_id_worker.rs  id_worker_utils.rs  mod.rs  snowflake_id_worker.rs
tests/: config_tests.rs  generator_tests.rs  options_tests.rs
