[package]
name = "idworker"
version = "1.0.0"
edition = "2024"
authors = ["zbz"]
keywords = ["id", "idworker", "generator", "idgenerator", "snowflake"]
description = "A high-performance distributed ID generator library implementing Snowflake algorithm variants with multiple optimization modes for different performance requirements."
categories = ["algorithms"]
license = "MIT"
homepage = "https://github.com/rusthing/idworker"
repository = "https://github.com/rusthing/idworker"
readme = "README.adoc"

[features]
default = []
config = ["dep:log", "dep:serde"]

[dependencies]
log = { version = "0.4.29", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "fast_benches"
harness = false

[[bench]]
name = "normal_benches"
harness = false